methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:6: error: not found: value isFacing
    if (isFacing()==false) {
        ^