methods.slug.SlugHunting.scala.code
def hunt() {
  avance()
  while (isFacingTrail()==true) {
    avance()
    if (isFacing()==false) {
      recule()
      gauche()
    }
  }
}
def isFacingTrail():Boolean = {
  if (estFaceMur())
    return false
  avance()
  if (getCouleurSol()==Color.green) {
    recule()
    return true
  }
  recule()
  return false
}